--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,6 +1,5 @@
 {
   "imports": {
-    "$std/": "https://deno.land/std@0.222.0/",
-    "$chai": "https://deno.land/x/chai@v4.3.6/lib/chai.js"
+    "@deno/dnt": "jsr:@deno/dnt@^0.41.1"
   }
 }
